Update contacts view

--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -28,14 +28,13 @@
     </div>
     <div>
       <%= f.input :symptoms, label: 'Do you have any symptoms of COVID-19' %>
-      <%= f.input :has_diabetes, label: 'I have diabetes', input_html: { class: "form-checkbox" } %>
-      <%= f.input :has_hyper_tension, label: 'I have hyper tension', input_html: { class: "form-checkbox" } %>
-      <%= f.input :has_heart_disease, label: 'I have heart disease', input_html: { class: "form-checkbox" } %>
-      <%= f.input :has_kidney_disease, label: 'I have kidney disease', input_html: { class: "form-checkbox" } %>
-      <%= f.input :is_pregnant, label: 'I am pregnant', input_html: { class: "form-checkbox" } %>
-      <%= f.input :primary_contact, label: 'I have had contact with COVID positive patient', input_html: { class: "form-checkbox mt-4" } %>
-      <%#= f.input :has_tested, label: 'I have tested for crona', input_html: { class: "form-checkbox" } %>
-      <%= f.input :was_positive, label: 'I was a covid patient', input_html: { class: "form-checkbox" } %>
+      <%= f.input :has_diabetes, label: 'Do you have diabetes?', input_html: { class: "form-radio mr-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
+      <%= f.input :has_hyper_tension, label: 'Do you have hyper tension?', input_html: { class: "form-radio mr-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
+      <%= f.input :has_heart_disease, label: 'Do you have heart disease?', input_html: { class: "form-radio mr-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
+      <%= f.input :has_kidney_disease, label: 'Do you have kidney disease?', input_html: { class: "form-radio mr-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
+      <%= f.input :primary_contact, label: 'Have you had Contact with any COVID positive patient?', input_html: { class: "form-radio mr-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
+      <%= f.input :was_positive, label: 'Were you a covid patient?', input_html: { class: "form-radio mr-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
+      <%= f.input :is_pregnant, label: 'Are you pregnant (optional)', input_html: { class: "form-radio mr-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons %>
       <%= f.input :test_type, label: 'Enter your covid test details' %>
       <%= f.input :recent_history, label: 'Do you have any recent medical history' %>
     </div>
