Add seat number

--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -8,6 +8,8 @@
 
     <%= f.input :name, required: true %>
     <%= f.input :phone, required: true %>
+    <%= f.input :passport_number, required: true %>
+    <%= f.input :seat_number, label: 'Add your seat number' %>
     <%= f.input :gender, input_html: { class: 'form-select mt-1 block w-ful' }, required: true %>
     <%= f.input :age, required: true %>
     <!--    <div>-->
