--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -21,6 +21,16 @@
               </p>
             </dd>
           </div>
+          <div class="sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6 sm:py-5">
+            <dt class="text-sm leading-5 font-medium text-gray-500">
+              Passport Number
+            </dt>
+            <dd class="mt-1 text-sm flex flex-col leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
+              <p>
+                <%= @contact.passport_number %>
+              </p>
+            </dd>
+          </div>
           <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
             <dt class="text-sm leading-5 font-medium text-gray-500">
               Phone Number, Click to Call
