--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -19,24 +19,24 @@
     <!--    </div>-->
     <div>
       <hr class="pb-4"/>
-      <%= f.input :house_name, required: true %>
+      <%= f.input :house_name, label: 'Address', required: true %>
       <%#= f.input :number_of_family_members %>
       <%= f.input :ward, required: true %>
       <%#= f.input :landmark %>
-      <%= f.association :panchayat, collection: Panchayat.all(), input_html: { class: 'form-select', id: 'dropdown-choice-select' }, required: true %>
+      <%= f.association :panchayat, collection: Panchayat.all(), input_html: { class: 'form-select', id: 'dropdown-choice-select-1' }, required: true %>
     </div>
     <div class="mt-4 text-xl font-semibold">
       B. Self Declaration
     </div>
     <div>
-      <%= f.input :symptoms, label: 'Do you have any symptoms of COVID-19' %>
-      <%= f.input :has_diabetes, label: 'Do you have diabetes?', input_html: { class: "form-radio mr-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
-      <%= f.input :has_hyper_tension, label: 'Do you have hyper tension?', input_html: { class: "form-radio mr-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
-      <%= f.input :has_heart_disease, label: 'Do you have heart disease?', input_html: { class: "form-radio mr-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
-      <%= f.input :has_kidney_disease, label: 'Do you have kidney disease?', input_html: { class: "form-radio mr-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
-      <%= f.input :primary_contact, label: 'Have you had Contact with any COVID positive patient?', input_html: { class: "form-radio mr-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
-      <%= f.input :was_positive, label: 'Were you a covid patient?', input_html: { class: "form-radio mr-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
-      <%= f.input :is_pregnant, label: 'Are you pregnant (optional)', input_html: { class: "form-radio mr-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons %>
+      <%= f.association :symptoms, label: 'Do you have any symptoms of COVID-19', collection: Symptom.all(), input_html: { class: 'form-select', id: 'dropdown-choice-select' }, required: true %>
+      <%= f.input :has_diabetes, label: 'Do you have diabetes?', input_html: { class: "form-radio m-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
+      <%= f.input :has_hyper_tension, label: 'Do you have hyper tension?', input_html: { class: "form-radio m-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
+      <%= f.input :has_heart_disease, label: 'Do you have heart disease?', input_html: { class: "form-radio m-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
+      <%= f.input :has_kidney_disease, label: 'Do you have kidney disease?', input_html: { class: "form-radio m-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
+      <%= f.input :primary_contact, label: 'Have you had Contact with any COVID positive patient?', input_html: { class: "form-radio m-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
+      <%= f.input :was_positive, label: 'Were you a covid patient?', input_html: { class: "form-radio m-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons, required: true %>
+      <%= f.input :is_pregnant, label: 'Are you pregnant (optional)', input_html: { class: "form-radio m-2" }, collection: [['Yes', true], ['No', false]], as: :radio_buttons %>
       <%= f.input :test_type, label: 'Enter your covid test details' %>
       <%= f.input :recent_history, label: 'Do you have any recent medical history' %>
     </div>
