--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -1,18 +1,23 @@
 <% if current_user && current_user.panchayat_admin? %>
-  <h1 class="md:text-5xl text-3xl">Pending Houses for Verfication</h1>
+  <h1 class="md:text-5xl text-3xl" xmlns="http://www.w3.org/1999/html">Pending Houses for Verfication</h1>
   <%= render 'panchayat/list' %>
 <% else %>
   <section>
     <div class="relative bg-gray-50 overflow-hidden">
       <div class="mt-10 mx-auto max-w-screen-xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 xl:mt-28">
         <div class="text-center">
-          <h2 class="text-4xl tracking-tight leading-10 font-extrabold text-gray-900 sm:text-5xl sm:leading-none md:text-6xl">
+          <h1 class="text-4xl tracking-tight leading-10 font-extrabold text-gray-900 sm:text-5xl sm:leading-none md:text-6xl">
             Welcome to
             <br class="xl:hidden"/>
             <span class="text-indigo-600">Kerala</span>
+          </h1>
+          <h2 class="text-xl tracking-tight leading-10 font-extrabold text-gray-900 sm:text-2xl sm:leading-none md:text-3xl mt-2">
+            We are happy and prepared to receive you!!!
           </h2>
-          <p class="mt-3 max-w-md mx-auto text-base text-gray-500 sm:text-lg md:mt-5 md:text-xl md:max-w-3xl">
-            You have to register and complete all the steps for travelling to Kerala.
+          <p class="mt-3 max-w-md mx-auto text-base text-gray-500 sm:text-lg md:mt-5 md:text-xl md:max-w-3xl mt-2">
+            Kindly update the details to help us guide you home safely. <br>
+            Under one login, please enter your family and friends travelling with you and who will be staying in the
+            same place as you.
           </p>
           <% if current_user.present? %>
             <% if @applications.present? %>
