--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -92,7 +92,7 @@
               Symptoms
             </dt>
             <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-              <div class="font-bold"><%= @contact.symptoms %></div>
+              <div class="font-bold"><%= @contact.symptoms.pluck(:name).join(', ') %></div>
             </dd>
           </div>
           <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
