--- a/app/views/ports/show.html.erb
+++ b/app/views/ports/show.html.erb
@@ -1,1 +1,88 @@
-<%= @port.name %>
+<% presenter = Ports::ShowPresenter.new(self, @port.applications) %>
+<div class="flex mt-2 p-2">
+  <%= link_to 'Find', port_path(@port), class: 'btn bg-indigo-600 text-white btn-large' %>
+</div>
+<div class="mt-4 p-2">
+  <%= simple_form_for :search, url: port_path(@port), method: "GET" do |f| %>
+
+    <div class="flex flex-col text-left md:flex-row">
+      <%= f.input :start_date, label: 'From', class: 'flex', html5: true, input_html: { class: 'flex form-select mr-4', value: presenter.start_date.to_s }, as: :date, default: Date.today, required: false %>
+      <%= f.input :end_date, label: 'To', class: 'flex', html5: true, input_html: { class: 'flex form-select mr-4', value: presenter.end_date.to_s }, as: :date, default: Date.today, required: false %>
+      <%= f.input :category, label: 'Status', input_html: { class: 'flex form-select mr-4' }, collection: ['red'].map { |a| [a.titleize, a] }, required: false %>
+      <%#= f.input :state, label: 'State', input_html: { class: 'flex form-select mr-4' }, collection: State.all.map { |a| [a.name, a.id] }, required: false %>
+    </div>
+    <div class="flex">
+      <%= f.submit "Search", class: "mr-2 cursor-pointer rounded shadow inline-block px-2 py-1 bg-indigo-600 text-white mt-4" %>
+      <%= link_to "Reset", port_path(@port), class: 'bg-white cursor-pointer rounded shadow inline-block px-2 py-1 mt-4' %>
+    </div>
+  <% end %>
+</div>
+<% if params[:search].present? %>
+  <div class="font-semibold mt-4 text-xl">
+    filters Applied
+  </div>
+  <div>
+    <% if presenter.search_category.present? %>
+      <div class="p-2 bg-white rounded-md inline-block shadow text-sm text-gray-700 mr-2">
+        Status: <%= presenter.search_category %>
+      </div>
+    <% end %>
+  </div>
+<% end %>
+<% if presenter.applications.empty? %>
+  <div class="bg-white p-4 mt-4  border border-gray-200 shadow rounded-lg mx-auto my-2">
+    No applications found on the applied date range
+  </div>
+<% end %>
+<div class="mt-2">
+  <%= page_entries_info presenter.applications, entry_name: 'Applications' %>
+</div>
+<% presenter.applications.each do |e| %>
+  <div class="bg-white rounded shadow mt-4 flex">
+    <div>
+      <% e.contacts.each do |c| %>
+        <div class="grid md:grid-cols-5 grid-cols-1 gap-4 p-4 border">
+          <div>
+            <div class="font-semibold">
+              Name
+            </div>
+            <%= c.name %>
+          </div>
+          <div>
+            <div class="font-semibold">
+              Gender
+            </div>
+            <%= c.gender %>
+          </div>
+          <div>
+            <div class="font-semibold">
+              Passport Number
+            </div>
+            <%= c.passport_number %>
+          </div>
+          <div>
+            <div class="font-semibold">
+              Status
+            </div>
+            <div class="p-2  <%= c.is_red_flagged ? 'bg-red-500' : 'bg-green-500' %>">
+            </div>
+          </div>
+          <div class="text-center">
+            <%= link_to 'View', summary_application_contact_path(e, c), class: "p-4 bg-orange-200 border-orange-400 text-orange-700 btn" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <div class="flex items-center px-4">
+      <div>
+        <div class="font-semibold">
+          Flight Number
+        </div>
+        <%= e.flight_number %>
+      </div>
+    </div>
+  </div>
+<% end %>
+<div class="mt-4 border p-4">
+  <%= paginate presenter.applications %>
+</div>
