--- a/app/views/applications/_form.html.erb
+++ b/app/views/applications/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :flight_number, label: 'Enter Your flight number' %>
     <%= f.input :port_of_departure, label: 'Place you are coming form' %>
     <%= f.association :port, collection: Port.all(), input_html: { class: 'form-select', id: 'dropdown-choice-select' }, label: 'Port of arrival in Kerala' %>
-    <%= f.input :arrival_on, label: 'Arrival on', class: 'flex', html5: true, input_html: { class: 'flex form-select mr-4' }, as: :datetime, required: false %>
+    <%#= f.input :arrival_on, label: 'Arrival on', class: 'flex', html5: true, input_html: { class: 'flex form-select mr-4' }, as: :datetime, required: false %>
     <span class="inline-flex rounded-md shadow-sm">
           <%= f.button :submit, 'Create Application', 'data-turbolinks-scroll': false, class: 'mt-4 inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md text-white bg-gray-900 hover:bg-gray-800 focus:outline-none focus:border-gray-700 focus:shadow-outline-indigo active:bg-gray-700 transition ease-in-out duration-150' %>
         </span>
